--- a/jenkinsfile
+++ b/jenkinsfile
@@ -47,6 +47,17 @@ pipeline {
                '''
              }
           }
+     }    
+     stage ('Login and Push Image on docker hub') {
+         agent any
+         steps {
+            script {
+              sh '''
+                  echo $DOCKERHUB_PASSWORD | docker login -u $DOCKERHUB_ID --password-stdin
+                  docker push ${DOCKERHUB_ID}/$IMAGE_NAME:$IMAGE_TAG
+              '''
+            }
+         }
      }
      stage('Push image in staging and deploy it') {
        when {
