--- a/jenkinsfile
+++ b/jenkinsfile
@@ -100,14 +100,13 @@ pipeline {
             '''
           }
         }
-      post {
-        success {
-            slackSend (color: '#00FF00', message: "SUCCESSFUL: Job '${env.JOB_NAME} [${env.BUILD_NUMBER}]' (${env.BUILD_URL})")
+        post {
+          always {
+               script {
+                    slackNotifier currentBuild.result
+               }
+          }  
         }
-        failure {
-            slackSend (color: '#FF0000', message: "FAILED: Job '${env.JOB_NAME} [${env.BUILD_NUMBER}]' (${env.BUILD_URL})")
-        }   
-      }
      }
   }
 }
